tests/js_error/source_locations/expression/assign_op/get_private_property.exp
Error: 
  ┌ source_locations/expression/assign_op/get_private_property.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at get #foo (source_locations/expression/assign_op/get_private_property.js:3:11)
  at test (source_locations/expression/assign_op/get_private_property.js:7:9)
  at <global> (source_locations/expression/assign_op/get_private_property.js:12:1)