tests/js_error/source_locations/expression/assign_op/get_private_property.js
class C {
  get #foo() {
    throw new Error();
  }

  test() {
    this.#foo += 1;
  }
}

var c = new C();
c.test();